Adding function is now working

--- a/pycharmtut/pycharmtut/panitllas/newmember_template.html
+++ b/pycharmtut/pycharmtut/panitllas/newmember_template.html
@@ -13,13 +13,13 @@
     <br>
     <ul>
         <li><p2 style="margin: 5px, border: 5px">
-            Name: {{member.name}} {{member.last_name}}</p2></li>
+            <b>Name:</b> {{member.name}} {{member.last_name}}</p2></li>
         <li><p2 style="margin: 5px, border: 5px">
-            Birthday: {{member.birthday}}</p2></li>
+            <b>Birthday:</b> {{member.birthday}}</p2></li>
         <li><p2 style="margin: 5px, border: 5px">
-            Kinship Degree: {{member.kinship_deg}}</p2></li>
+            <b>Kinship Degree:</b> {{member.kinship_deg}}</p2></li>
         <li><p2 style="margin: 5px, border: 5px">
-            Favourite Ice Cream Flavor: {{member.icecream_flavor}}</p2></li>
+            <b>Favourite Ice Cream Flavor:</b> {{member.icecream_flavor}}</p2></li>
     </ul>
 </body>
 </html>
