Spelling errors solved

--- a/pycharmtut/pycharmtut/panitllas/get_member_by_name.html
+++ b/pycharmtut/pycharmtut/panitllas/get_member_by_name.html
@@ -19,7 +19,7 @@
         <tr>
         <th style="padding: 5px">Name</th>
         <th style="padding: 5px">Birthday</th>
-        <th style="padding: 5px">Kingship Degree</th>
+        <th style="padding: 5px">Degree of Kinship</th>
         <th style="padding: 5px">Favorite Ice Cream Flavor</th>
         </tr>
         {% for mem in member %}
